<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/bg_gradient"
    android:scrollbars="none" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnSpeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="89dp"
                android:layout_marginTop="50dp"
                android:background="@null"
                android:src="@drawable/ico_mic" />

            <TextView
                android:id="@+id/btntext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSpeak"

                android:layout_marginStart="130dp"
                android:layout_marginTop="20dp"
                android:text="@string/tap_on_mic"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btntext"
                android:layout_marginStart="150dp"
                android:layout_marginTop="50dp"
                android:text="@string/user_say"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/txtSpeechInput"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/relres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtSpeechInput"
                android:layout_marginStart="120dp"
                android:layout_marginTop="30dp"
                android:text="@string/relief_bot_responds"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/outputTex"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relres"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:textStyle="normal"/>





        </RelativeLayout>
    </LinearLayout>
</ScrollView>